# ssh_over_clipboard

./: .gitignore  README.md  pyproject.toml
frames/: 044c733c-6632-4b02-aca9-c817399b954a.json  052b9cf1-4c14-44b6-9d52-05cab1c19955.json  05f2e033-1f5f-4d2f-acf8-d52bb6b0c338.json  071381af-956a-45a9-8e1c-1a02d15d115b.json  08bd9ee2-b4cd-4199-a39e-344ccac28c06.json  08c11060-e934-4933-b39f-d66ea1acf362.json  09d42f02-67bb-4e9d-b73d-c7449aceddb7.json  0a5c31dd-3781-4c59-adf9-3a2e9f5e0031.json  0fcbcdbe-4c51-480d-b466-19deea8a936f.json  114bf359-6424-4226-9705-9ec740c6a70d.json  11753e94-a824-4fa9-b5c7-27e8f006b190.json  12d7a2a6-ea9b-43c9-aea2-0e09982cf959.json  13564790-4f0e-4c4e-b7eb-2e0b0898e0d7.json  16e99ef0-66bc-488f-a381-a8dd0c66530e.json  191b5f09-8197-41c0-b14d-465baf593be1.json  19cd2dcf-f9c6-4fd8-8987-926d70ec8a89.json  1a8e4dee-29c5-4abf-b2e3-6b88ada8e723.json  1e57adb2-b7d1-4a27-8653-7bf7008f6a57.json  20b5d0fa-e048-4316-b4bd-fbf0a9576159.json  21bba9bc-b052-4b95-a3eb-ed5b432e29d5.json  236897bb-67bd-440b-8af6-db0afd70c642.json  2413a62a-b7cb-4cf5-91aa-e4e41121411c.json  24ffc8fc-148c-463d-873a-4e8d5eda5ddc.json  26a27f10-8b9e-4ebf-8fcc-d43b9b9dca14.json  27d46d33-6e1b-40a2-bbfe-ce59896d09fa.json  27fa9c1d-60e2-42d5-aa6c-72b49ba89f09.json  2815aacc-b391-4196-8fae-5b78cae31591.json  29c02f78-9abe-4ded-aa56-543d67172d94.json  2cfb91e6-3677-4873-bed6-23ec302c1baa.json  2da0323e-6d6d-4fe7-92ba-8e7fea60a2c4.json  2e427dcb-b0cf-4214-b529-aee893d5717d.json  2f4db8b2-27b3-4341-8600-b6c954f15354.json  2f8b9863-c6fb-4acf-b7b5-3c8fb9d64fad.json  (+124 more)
tests/: __init__.py  (+24 more)
(+30 files in other folders)
