[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clipssh"
version = "0.1.0"
description = "Clipboard-based local SSH emulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sshc = "clipssh.client:main"
sshcd = "clipssh.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
