[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clipssh"
version = "0.1.0"
description = "Clipboard-based local SSH emulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.scripts]
sshc = "clipssh.client:main"
sshcd = "clipssh.server:main"
sshg = "gitssh.client:main"
sshgd = "gitssh.server:main"
sshg-usb-probe = "gitssh.usb_probe:main"
sshg-usb-gadget = "gitssh.usb_gadget:main"
sshg-audio-setup = "gitssh.audio_setup:main"
sshg-audio-probe = "gitssh.audio_probe:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
